--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "truffle": "5.0.5",
     "web3": "1.0.0-beta.55"
   },
-  "homepage": "http://dappuniversity.github.io/social-network",
+  "homepage": "http://Shreyas-Bhaskar.github.io/block1",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
